--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.govuk_text_field :name %>
   <%= f.govuk_text_field :url %>
   <%= f.govuk_text_field :prefix %>
-  <%= f.govuk_submit %>
+  <%= f.govuk_submit "Save" %>
 <% end %>
