--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for site do |f| %>
   <%= f.govuk_text_field :name %>
+  <%= f.govuk_text_field :environment %>
   <%= f.govuk_text_field :url %>
   <%= f.govuk_text_field :prefix %>
   <%= f.govuk_submit "Save" %>
