--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -4,6 +4,7 @@
   table.with_head do |head|
     head.with_row do |row|
       row.with_cell(text: 'Site')
+      row.with_cell(text: 'Environment')
       row.with_cell(text: 'Branch')
       row.with_cell(text: 'Built At')
       row.with_cell(text: '')
@@ -13,18 +14,19 @@
   @sites.all.each do |site|
     table.with_body do |body|
       body.with_row do |row|
-        row.with_cell(text: govuk_link_to(site.name, site.main_url))
+        row.with_cell(text: govuk_link_to(site.name, site.main_url, no_visited_state: true))
+        row.with_cell(text: site.environment)
         row.with_cell(text: site.branch)
         row.with_cell(text: site.built_at.to_fs(:short))
         if site.jira.present?
-          row.with_cell(text: govuk_link_to('JIRA', site.jira_link))
+          row.with_cell(text: govuk_link_to('JIRA', site.jira_link, no_visited_state: true))
         else
           row.with_cell(text: "")
         end
-        row.with_cell(text: govuk_link_to('edit', edit_site_path(site)))
+        row.with_cell(text: govuk_link_to('edit', edit_site_path(site), no_visited_state: true))
       end;
     end;
   end;
 end %>
 
-<p><%= govuk_link_to('Add Site', new_site_path) %></p>
+<p><%= govuk_link_to('Add Site', new_site_path, no_visited_state: true) %></p>
