--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,5 +1,5 @@
 <h1 class="govuk-heading-xl">Create Site</h1>
 
-<p><%= govuk_link_to "Back", root_path %></p>
+<p><%= govuk_link_to "Back", root_path, no_visited_state: true %></p>
 
 <%= render "form", site: @site %>
